[gd_scene load_steps=23 format=3 uid="uid://css4bbxa6vo05"]

[ext_resource type="Script" path="res://game/ui/level_complete.gd" id="1_7veru"]
[ext_resource type="FontFile" uid="uid://8v3hsck5sfa" path="res://game/font/Kenney Mini Square.ttf" id="2_6bc8g"]
[ext_resource type="Script" path="res://game/ui/beep_ui/beep_button.gd" id="3_icn1g"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_5pnlc"]
color = Color(1, 1, 1, 1)
thickness = 4

[sub_resource type="StyleBoxLine" id="StyleBoxLine_lr5wo"]
color = Color(1, 1, 1, 1)
thickness = 4

[sub_resource type="StyleBoxLine" id="StyleBoxLine_h46x4"]
color = Color(1, 1, 1, 1)
thickness = 4
vertical = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_asnur"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.431373, 0.529412, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aatid"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhibg"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1wdaa"]
bg_color = Color(0.027451, 0.12549, 0.603922, 1)
border_width_left = 6
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.027451, 0.12549, 0.603922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t2w3o"]
bg_color = Color(0.027451, 0.12549, 0.603922, 1)
border_width_left = 6
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.027451, 0.12549, 0.603922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cahce"]
bg_color = Color(0.431373, 0.529412, 1, 1)
border_width_left = 6
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.431373, 0.529412, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3je4v"]
bg_color = Color(0.431373, 0.529412, 1, 1)
border_width_left = 6
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.431373, 0.529412, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uox35"]
bg_color = Color(0.027451, 0.12549, 0.603922, 1)
border_width_left = 6
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.027451, 0.12549, 0.603922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yx0f2"]
bg_color = Color(0.027451, 0.12549, 0.603922, 1)
border_width_left = 6
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.027451, 0.12549, 0.603922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e12sh"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 6
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j2ha4"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 6
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n7oeb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ubnim"]

[sub_resource type="Animation" id="Animation_a1nfi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kmvff"]
resource_name = "show"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k0nvf"]
_data = {
"RESET": SubResource("Animation_a1nfi"),
"show": SubResource("Animation_kmvff")
}

[node name="LevelComplete" type="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7veru")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.627451)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="LevelName" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6bc8g")
text = "Level Name"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_5pnlc")

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Times" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="BestTime" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/Times"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6bc8g")
text = "Best Time: 99:99:99"
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer/HBoxContainer/Times"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_lr5wo")

[node name="CurrentTime" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/Times"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6bc8g")
theme_override_font_sizes/font_size = 16
text = "Time: 99:99:99"
horizontal_alignment = 2

[node name="VSeparator" type="VSeparator" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_h46x4")

[node name="SecretsAndCheats" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Secrets" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/SecretsAndCheats"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6bc8g")
text = "Secrets: 00/99"
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer/HBoxContainer/SecretsAndCheats"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_lr5wo")

[node name="Cheats" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/SecretsAndCheats"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6bc8g")
theme_override_font_sizes/font_size = 16
text = "Cheats: 00/99"
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_5pnlc")

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_6bc8g")
theme_override_styles/focus = SubResource("StyleBoxFlat_asnur")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_aatid")
theme_override_styles/disabled = SubResource("StyleBoxFlat_rhibg")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_1wdaa")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_t2w3o")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_cahce")
theme_override_styles/hover = SubResource("StyleBoxFlat_3je4v")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_uox35")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yx0f2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_e12sh")
theme_override_styles/normal = SubResource("StyleBoxFlat_j2ha4")
disabled = true
text = "Continue "
script = ExtResource("3_icn1g")

[node name="StayHereButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_6bc8g")
theme_override_styles/focus = SubResource("StyleBoxFlat_asnur")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_n7oeb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ubnim")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_1wdaa")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_t2w3o")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_cahce")
theme_override_styles/hover = SubResource("StyleBoxFlat_3je4v")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_uox35")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yx0f2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_e12sh")
theme_override_styles/normal = SubResource("StyleBoxFlat_j2ha4")
text = "Stay Here"
script = ExtResource("3_icn1g")

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_6bc8g")
theme_override_styles/focus = SubResource("StyleBoxFlat_asnur")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_n7oeb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ubnim")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_1wdaa")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_t2w3o")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_cahce")
theme_override_styles/hover = SubResource("StyleBoxFlat_3je4v")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_uox35")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yx0f2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_e12sh")
theme_override_styles/normal = SubResource("StyleBoxFlat_j2ha4")
text = "Return To Main Menu"
script = ExtResource("3_icn1g")

[node name="SaveAndQuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_6bc8g")
theme_override_styles/focus = SubResource("StyleBoxFlat_asnur")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_n7oeb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ubnim")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_1wdaa")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_t2w3o")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_cahce")
theme_override_styles/hover = SubResource("StyleBoxFlat_3je4v")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_uox35")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yx0f2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_e12sh")
theme_override_styles/normal = SubResource("StyleBoxFlat_j2ha4")
text = "Save and Quit"
script = ExtResource("3_icn1g")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k0nvf")
}

[connection signal="pressed" from="CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/StayHereButton" to="." method="_on_stay_here_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SaveAndQuitButton" to="." method="_on_save_and_quit_button_pressed"]
